--- a/src/components/admin/index.css
+++ b/src/components/admin/index.css
@@ -11,6 +11,13 @@ I wanted to create a custom CSS sheet to hold all of the CSS for the admin-relat
     color: #1da1f2;
 }
 
+.fse-border{
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 5px;
+}
+
 
 /* ALL OF THE CSS THAT FOLLOWS IS FOR THE LOGIN PAGE */
 .fse-login-border{
@@ -30,18 +37,10 @@ I wanted to create a custom CSS sheet to hold all of the CSS for the admin-relat
 }
 
 /* ALL OF THE CSS THAT FOLLOWS IS FOR THE ADMIN NAVBAR */
-
-.fse-navbar-border{
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
-    border-radius: 5px;
-}
-
 .btn.fse-navbar-button{
     display:block;
     color: white;
-    background-color: blue;
+    background-color: #1da1f2;
     padding: 6px 12px;
     margin: 12px auto;
     width: 75%;
@@ -59,14 +58,28 @@ I wanted to create a custom CSS sheet to hold all of the CSS for the admin-relat
     padding: 12px 0px;
 }
 
-/* ALL THE CSS THAT FOLLOWS IS FOR THE ADMIN STATS */
-.fse-stats-border{
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
-    border-radius: 5px;
-    padding: 0px 16px;
+/* ALL THE CSS THAT FOLLOWS IS FOR THE TABLES AND FORMS */
+.fse-table-font-size{
+    font-size:14px;
 }
+
+.btn.fse-update-button{
+    color: white;
+    background-color: #1da1f2;
+    padding: 6px 12px;
+    margin: 0px 16px;
+    width: 25%;
+}
+
+.btn.fse-delete-button{
+    color: white;
+    background-color: red;
+    padding: 6px 12px;
+    margin: 0px 16px;
+    width: 25%;
+}
+
+/* ALL THE CSS THAT FOLLOWS IS FOR THE ADMIN STATS */
 
 
 /* ALL THE CSS THAT FOLLOWS IS FOR TUIT MODAL */
