--- a/src/components/admin/index.css
+++ b/src/components/admin/index.css
@@ -82,4 +82,11 @@ I wanted to create a custom CSS sheet to hold all of the CSS for the admin-relat
 /* ALL THE CSS THAT FOLLOWS IS FOR THE ADMIN STATS */
 
 
-/* ALL THE CSS THAT FOLLOWS IS FOR TUIT MODAL */
+/* ALL THE CSS THAT FOLLOWS IS FOR MODALS */
+.btn.fse-create-button{
+    color: white;
+    background-color: #1da1f2;
+    padding: 6px 12px;
+    margin: 0px 16px;
+    width: 50%;
+}
