I went back in and cleaned up some logic for how the html is displayed. I also added the reducer logic to the user portal side of things to just ensure that every aspect of our application (admin/user portals) are all connected and working correctly. The admin can successfully login and logout of the backend. The user can login to the user portal side of tihngs but even though they are logged in they cannot enter hte admin portal. Lastly added more logic to when tuits are allowed to be displayed

--- a/src/components/admin/index.css
+++ b/src/components/admin/index.css
@@ -79,9 +79,6 @@ I wanted to create a custom CSS sheet to hold all of the CSS for the admin-relat
     width: 25%;
 }
 
-/* ALL THE CSS THAT FOLLOWS IS FOR THE ADMIN STATS */
-
-
 /* ALL THE CSS THAT FOLLOWS IS FOR MODALS */
 .btn.fse-create-button{
     color: white;
@@ -89,4 +86,13 @@ I wanted to create a custom CSS sheet to hold all of the CSS for the admin-relat
     padding: 6px 12px;
     margin: 0px 16px;
     width: 50%;
+}
+
+/* OTHER */
+.btn.fse-logout-button{
+    color: white;
+    background-color: #1da1f2;
+    padding: 6px 12px;
+    margin: 0px 16px;
+    width: 25%;
 }
